lxqt-archiver-1.1.0 / 2024-11-05
===================================
 * Added `application/vnd.rar` to the supported mime types.
 * Add clear button to filter bar.
 * Silenced a compilation warning about `GList`.

lxqt-archiver-1.0.0 / 2024-04-17
===================================
 * Ported to Qt6.

lxqt-archiver-0.9.1 / 2024-02-21
===================================
 * Support the use of 7zip instead of p7zip with the new option `USE_7Z` (`OFF` by default), especially for Debian-based systems.
 * Updated to new mimetype names of shared-mime-info ≥ 2.3.
 * Fixed extraction of multiple archives.

lxqt-archiver-0.9.0 / 2023-11-05
===================================
 * Ported away from deprecated time format.
 * Added appropriate fallback icons to toolbar and menu.

lxqt-archiver-0.8.0 / 2023-04-15
===================================
 * Updated translations and dependencies and bumped the version.

lxqt-archiver-0.7.0 / 2022-11-05
===================================
 * Removed the redundant function `n_fields()` from `glib-utils`.
 * Silenced some compilation warnings.

lxqt-archiver-0.6.0 / 2022-04-15
===================================
 * Allow changing of view icon size.
 * Allow sorting by any column (but only sort by the first column at startup).
 * Forget previous password (if any) on reloading archive.
 * Fixed the link in About dialog.

lxqt-archiver-0.5.0 / 2021-11-04
===================================
 * Bumped minimum required Qt version to 5.15.
 * Show password prompt for archives with encrypted lists.
 * Added milliseconds to name of temporary extraction folder.
 * Removed a duplicate assignment.
 * Fixed listing RAR archive contents with encrypted file list.

lxqt-archiver-0.4.0 / 2021-04-15
===================================
  * Support opening and extracting of disk images.
  * Also, support xz-compressed disk images.
  * Added "application/vnd.debian.binary-package" to mimetypes list.
  * Made directory view horizontally scrollable.